<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="reminder">Reminder</string>
    <string name="next">Next</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="all">Delete all data</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="work">Today Work</string>
    <string name="All">Delete all data</string>
    <string name="get">Today Work</string>

</resources>
