<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/edit_editdelete"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/get" />

    <Button
        android:id="@+id/delete_editdelete"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/All" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>