<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/green_color"
    >

    
        <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" 
      
        />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/holder"
        android:layout_below="@+id/holder"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/add"
        android:layout_alignRight="@+id/holder"
        android:text="@string/search"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ListView
        android:id="@+id/profiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add"
        android:layout_marginTop="29dp" 
        android:layout_marginBottom="10dp"
       
        >
    
    
    </ListView>

    <EditText
        android:id="@+id/holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold" />

    
</RelativeLayout>
