<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_prrofile"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/green_sky"
    >
    
    
        <TextView
        android:id="@+id/datep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" 
      
        />

    <Button
        android:id="@+id/addp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/holderp"
        android:layout_below="@+id/holderp"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/searchp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addp"
        android:layout_alignRight="@+id/holderp"
        android:text="@string/search"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ListView
        android:id="@+id/profilesp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addp"
        android:layout_marginTop="29dp" 
        android:layout_marginBottom="29dp" 
        >
    </ListView>

    <EditText
        android:id="@+id/holderp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datep"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    
</RelativeLayout>
