<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_reminder"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/green_tree"
    >

        <TextView
            android:id="@+id/dater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/reminder"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/holderr"
        android:layout_below="@+id/holderr"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/searchr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addr"
        android:layout_alignRight="@+id/holderr"
        android:text="@string/search"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ListView
        android:id="@+id/profilesr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addr"
        android:layout_marginTop="29dp" 
        android:layout_marginBottom="29dp" 
        >
    </ListView>

    <EditText
        android:id="@+id/holderr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dater"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    
</RelativeLayout>
